# catalogue

./: .gitignore  .travis.yml  Catalogue.alfredworkflow  Issues.md  Makefile  README.md  Resource Management.alfredworkflow  add_citation.py  add_citation.sh  bib2json.py  clean.py  clean_arxiv.py  config.py  copy_bibtex.py  delete_citation.py  edit_citation.py  edit_citation.sh  find.py  find_content.sh  find_name.sh  find_resource.sh  list_json.sh  pbpaste2json.py  requirements.txt  setup.cfg  setup.py  update_bibliography.py
.github/workflows/: ci.yml
catalogue/: __init__.py  alfred.py  bibtex.py  bin.py  utils.py
core/: alfred.py  bib.py  bibtex.py  bin.py  utils.py
doc/: Makefile  api.rst  conf.py  readme.rst
doc/source/: catalogue.alfred.rst  catalogue.bibtex.rst  catalogue.bin.rst  catalogue.utils.rst
output/: bibliography.bib
tests/: __init__.py  test.py  test_bibtex.py
